--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My CV</title>
+    <title>Andrei Ananich CV</title>
+    <link rel="icon" href="img/external-career-essential-outline-others-phat-plus-7.png">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
