--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Andrei Ananich CV</title>
-    <link rel="icon" href="img/external-career-essential-outline-others-phat-plus-7.png">
+    <link rel="icon" href="assets\img\external-career-essential-outline-others-phat-plus-7.png">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
         <h1>ANDREI ANANICH</h1>
-        <img src="img\T2tVbeV.jpeg" alt="my photo">
+        <img src="assets\img\T2tVbeV.jpeg" alt="my photo">
         <nav></nav>
     </header>
     <main></main>
