--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
     <header>
         <h1>ANDREI ANANICH</h1>
         <img src="assets\img\T2tVbeV.jpeg" alt="my photo">
-        <nav></nav>
+        <nav>Nav</nav>
     </header>
-    <main></main>
-    <aside></aside>
-    <footer></footer>
+    <main>Main</main>
+    <aside>aside</aside>
+    <footer>Footer</footer>
 </body>
 </html>
