feat: add class container for blocks

--- a/index.html
+++ b/index.html
@@ -12,10 +12,19 @@
     <header>
         <h1>ANDREI ANANICH</h1>
         <img src="assets\img\T2tVbeV.jpeg" alt="my photo">
-        <nav>Nav</nav>
+        <div class="container">Here will been the header text</div>
+        <nav>
+            <div class="container">Here will been the  navigation text</div>
+        </nav>
     </header>
-    <main>Main</main>
-    <aside>aside</aside>
-    <footer>Footer</footer>
+    <main>
+        <div class="container">Here will been the main text</div>
+    </main>
+    <aside>
+        <div class="container">Here will been the aside text</div>
+    </aside>
+    <footer>
+        <div class="container">Here will been the footer text</div>
+    </footer>
 </body>
 </html>
