feat: add nav links

--- a/index.html
+++ b/index.html
@@ -11,10 +11,21 @@
 <body>
     <header>
         <h1>ANDREI ANANICH</h1>
-        <img src="assets\img\T2tVbeV.jpeg" alt="my photo">
+        <img src="assets\img\944_oooo.plus (1).png" alt="my photo" width="300px" height="300px">
         <div class="container">Here will been the header text</div>
-        <nav>
-            <div class="container">Here will been the  navigation text</div>
+        <nav class="nav">
+            <ul class="nav-list">
+                <li class="nav-item"><a href="#contacts" class="nav-link">Contacts</a></li>
+                <li class="nav-item"><a href="#summary" class="nav-link">Summary</a></li>
+                <li class="nav-item"><a href="#skills" class="nav-link">Skills</a></li>
+                <li class="nav-item"><a href="#code" class="nav-link">Code</a></li>
+                <li class="nav-item"><a href="#courses" class="nav-link">Courses</a></li>
+                <li class="nav-item"><a href="#projects" class="nav-link">Projects</a></li>
+                <li class="nav-item"><a href="#education" class="nav-link">Education</a></li>
+                <li class="nav-item"><a href="#english" class="nav-link">English</a></li>
+
+            </ul>
+            
         </nav>
     </header>
     <main>
