feat: add h2 and some features for nav list

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <body>
     <header>
         <h1>ANDREI ANANICH</h1>
+        <h2>Junior Frontend Developer</h2>
         <img src="assets\img\944_oooo.plus (1).png" alt="my photo" width="300px" height="300px">
         <div class="container">Here will been the header text</div>
         <nav class="nav">
@@ -23,9 +24,7 @@
                 <li class="nav-item"><a href="#projects" class="nav-link">Projects</a></li>
                 <li class="nav-item"><a href="#education" class="nav-link">Education</a></li>
                 <li class="nav-item"><a href="#english" class="nav-link">English</a></li>
-
             </ul>
-            
         </nav>
     </header>
     <main>
