feat: add some styles for nav list and sections in main

--- a/index.html
+++ b/index.html
@@ -29,6 +29,44 @@
     </header>
     <main>
         <div class="container">Here will been the main text</div>
+
+        <section class=".section" id="profile">
+
+        </section>
+
+        <section class=".section" id="contacts">
+
+        </section>
+
+        <section class=".section" id="summary">
+
+        </section>
+
+        <section class=".section" id="skills">
+
+        </section>
+
+        <section class=".section" id="code">
+
+        </section>
+
+        <section class=".section" id="courses">
+
+        </section>
+
+        <section class=".section" id="projects">
+
+        </section>
+
+        <section class=".section" id="education">
+
+        </section>
+
+        <section class=".section" id="languages">
+
+        </section>
+
+        
     </main>
     <aside>
         <div class="container">Here will been the aside text</div>
