feat: add some info about education and languages

--- a/index.html
+++ b/index.html
@@ -144,13 +144,18 @@
         <section class=".section" id="education">
 
             <h2 class="section-title"><p>Education:</p></h2>
-            <div></div>
+            <ul>
+                <li>Branch of the BNTU «Minsk State Mechanical-Engineering College» - "Repair and operation of internal combustion engine" 2010-2014</li>
+                <li>The Belarus State Economic University (BSEU) - Economics and management at enterprises 2015-2020</li>
+            </ul>
 
         </section>
 
         <section class=".section" id="languages">
 
             <h2 class="section-title"><p>Languages:</p></h2>
+            <p>Russian - Native</p>
+            <p>English - Intermediate</p>
 
         </section>
     
