feat: added and applied some styles

--- a/index.html
+++ b/index.html
@@ -12,13 +12,11 @@
 <body>
 
     <header>
-        <h1>ANDREI ANANICH</h1>
+        <h1><p class="section-title">ANDREI ANANICH</p></h1>
 
-        <h2>Junior Frontend Developer</h2>
+        <h2><p class="section-title">Junior Frontend Developer</p></h2>
 
         <img src="assets\img\944_oooo.plus (1).png" alt="my photo" width="300px" height="300px">
-
-        <div class="container">Here will been the header text</div>
 
         <nav class="nav">
 
@@ -41,15 +39,8 @@
 
     <main>
 
-        <div class="container">Here will been the main text</div>
-
         <section class=".section" id="profile">
 
-            <h1 class="section-title">
-
-                <p>Andrei Ananich</p>
-
-            </h1>
 
         </section>
 
@@ -62,15 +53,15 @@
             </h2>
 
             <ul>
-                <li>Phone: <a href="tel:+375 25 977-50-47">+375 25 977-50-47</a></li>
+                <li>Phone: <a class="link" href="tel:+375 25 977-50-47">+375 25 977-50-47</a></li>
                 
-                <li>E-mail: <a href="mailto:Beldjandre@gmail.com">Beldjandre@gmail.com</a></li>
+                <li>E-mail: <a class="link" href="mailto:Beldjandre@gmail.com">Beldjandre@gmail.com</a></li>
 
-                <li>Telegram: <a href="https://telegram.me/Andrei_Ananich">@Andrei_Ananich</a></li>
+                <li>Telegram: <a class="link" href="https://telegram.me/Andrei_Ananich">@Andrei_Ananich</a></li>
 
-                <li>Discord: Andrei Ananich(@Andredead)</li>
+                <li>Discord:<a class="link"> Andrei Ananich(@Andredead)</a></li>
 
-                <li>Github: <a href="https://github.com/Andredead">https://github.com/Andredead</a></li>
+                <li>Github: <a class="link" href="https://github.com/Andredead">https://github.com/Andredead</a></li>
             </ul>
 
         </section>
