feat: add footer and rs image

--- a/index.html
+++ b/index.html
@@ -37,14 +37,9 @@
 
     </header>
 
-    <main>
+    <main class="main-container">
 
-        <section class=".section" id="profile">
-
-
-        </section>
-
-        <section class=".section" id="contacts">
+        <section class="section" id="contacts">
 
             <h2 class="section-title">
 
@@ -66,7 +61,7 @@
 
         </section>
 
-        <section class=".section" id="summary">
+        <section class="section" id="summary">
 
             <h2 class="section-title">
 
@@ -78,7 +73,7 @@
 
         </section>
 
-        <section class=".section" id="skills">
+        <section class="section" id="skills">
 
             <h2 class="section-title">
 
@@ -99,7 +94,7 @@
 
         </section>
 
-        <section class=".section" id="code">
+        <section class="section" id="code">
 
             <h2 class="section-title">
 
@@ -111,7 +106,7 @@
 
         </section>
 
-        <section class=".section" id="courses">
+        <section class="section" id="courses">
 
             <h2 class="section-title">
 
@@ -123,7 +118,7 @@
 
         </section>
 
-        <section class=".section" id="projects">
+        <section class="section" id="projects">
 
             <h2 class="section-title">
                 <p> Projects:</p>
@@ -132,7 +127,7 @@
 
         </section>
 
-        <section class=".section" id="education">
+        <section class="section" id="education">
 
             <h2 class="section-title"><p>Education:</p></h2>
             <ul>
@@ -142,7 +137,7 @@
 
         </section>
 
-        <section class=".section" id="languages">
+        <section class="section" id="languages">
 
             <h2 class="section-title"><p>Languages:</p></h2>
             <p>Russian - Native</p>
@@ -152,16 +147,12 @@
     
     </main>
 
-    <aside>
+    <footer class="footer-container">
+        <a class="link" href="https://github.com/Andredead">Andredead</a>
+        <p>2022</p>
+        <img class="link" href="https://rs.school/js/" src="assets\img\rs_school_js.svg" alt="rs_school_logo" width="200px" height="200px">
 
-        <div class="container">Here will been the aside text</div>
-
-    </aside>
-
-    <footer>
-
-        <div class="container">Here will been the footer text</div>
-
+        
     </footer>
 
 </body>
