--- a/index.html
+++ b/index.html
@@ -158,10 +158,8 @@ list-style: none;
 
     <footer class="footer-container">
         <a class="link" href="https://github.com/Andredead">Andredead</a>
-        <p>2022</p>
-        <img class="link" href="https://rs.school/js/" src="assets\img\rs_school_js.svg" alt="rs_school_logo" width="200px" height="200px">
-
-        
+        <div>2022</div>
+        <p><a href="https://rs.school/js/"><img src="assets\img\rs_school_js.svg" width="200px" height="200px" alt="rs_school_logo"></a></p>
     </footer>
 
 </body>
