feat: fix displaying link in projects section

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@ list-style: none;
             <h2 class="section-title">
                 <p> Projects:</p>
             </h2>
-            <a href="https://github.com/Andredead/rsschool-cv.git">Click here to see my CV code</a>
+            <a class="link" href="https://github.com/Andredead/rsschool-cv.git">Click here to see my CV code</a>
 
         </section>
 
